test/golden/85163210393859768.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:29:
  |
7 | main = putStrLn [fmt|{1 + - / lalalal}|]
  |                             ^
parse error on input `/' in haskell expression

    • In the quasi-quotation: [fmt|{1 + - / lalalal}|]
  |
7 | main = putStrLn [fmt|{1 + - / lalalal}|]
  |                      ^^^^^^^^^^^^^^^^^^^
